--- a/DeepLearning-Actions/01-pytorch-tutorial.ipynb
+++ b/DeepLearning-Actions/01-pytorch-tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,9 +10,9 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.21.5\n",
-      "pandas:      1.3.5\n",
-      "PyTorch:      1.12.1\n"
+      "numpy:       1.23.5\n",
+      "pandas:      1.5.2\n",
+      "PyTorch:      1.12.0\n"
      ]
     }
    ],
@@ -939,12 +939,12 @@
      "evalue": "Trying to backward through the graph a second time, but the buffers have already been freed. Specify retain_graph=True when calling backward the first time.",
      "output_type": "error",
      "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/cj/qcn3hpb10hq63mcjy_vb7x100000gn/T/ipykernel_15891/354524408.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0;31m# 重复执行反向求导会报错\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 2\u001B[0;31m \u001B[0mc\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mbackward\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[0;32m/Users/Shared/miniconda3/envs/tensorflow1.15/lib/python3.7/site-packages/torch/tensor.py\u001B[0m in \u001B[0;36mbackward\u001B[0;34m(self, gradient, retain_graph, create_graph)\u001B[0m\n\u001B[1;32m    116\u001B[0m                 \u001B[0mproducts\u001B[0m\u001B[0;34m.\u001B[0m \u001B[0mDefaults\u001B[0m \u001B[0mto\u001B[0m\u001B[0;31m \u001B[0m\u001B[0;31m`\u001B[0m\u001B[0;31m`\u001B[0m\u001B[0;32mFalse\u001B[0m\u001B[0;31m`\u001B[0m\u001B[0;31m`\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    117\u001B[0m         \"\"\"\n\u001B[0;32m--> 118\u001B[0;31m         \u001B[0mtorch\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mautograd\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mbackward\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mgradient\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mretain_graph\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mcreate_graph\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    119\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    120\u001B[0m     \u001B[0;32mdef\u001B[0m \u001B[0mregister_hook\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mhook\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m/Users/Shared/miniconda3/envs/tensorflow1.15/lib/python3.7/site-packages/torch/autograd/__init__.py\u001B[0m in \u001B[0;36mbackward\u001B[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001B[0m\n\u001B[1;32m     91\u001B[0m     Variable._execution_engine.run_backward(\n\u001B[1;32m     92\u001B[0m         \u001B[0mtensors\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mgrad_tensors\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mretain_graph\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mcreate_graph\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 93\u001B[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001B[0m\u001B[1;32m     94\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     95\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mRuntimeError\u001B[0m: Trying to backward through the graph a second time, but the buffers have already been freed. Specify retain_graph=True when calling backward the first time."
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/cj/qcn3hpb10hq63mcjy_vb7x100000gn/T/ipykernel_15891/354524408.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# 重复执行反向求导会报错\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/Shared/miniconda3/envs/tensorflow1.15/lib/python3.7/site-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    116\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    117\u001b[0m         \"\"\"\n\u001b[0;32m--> 118\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    119\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    120\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/Shared/miniconda3/envs/tensorflow1.15/lib/python3.7/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     91\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     92\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Trying to backward through the graph a second time, but the buffers have already been freed. Specify retain_graph=True when calling backward the first time."
      ]
     }
    ],
@@ -1607,9 +1607,207 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### nn.Module 的可更新参数\n",
+    "### nn.Module 的不同参数\n",
     "\n",
-    "`nn.Module` 中的参数并不都是可以更新，参考博客 [PyTorch nn.Module中的self.register_buffer()解析](https://www.jianshu.com/p/12a8207149b0)"
+    "`nn.Module` 中的参数并不都是可以更新，参考博客 [PyTorch nn.Module中的self.register_buffer()解析](https://www.jianshu.com/p/12a8207149b0).\n",
+    "\n",
+    "模型的可更新参数可以通过 `Module.parameters()` 或者 `Module.named_parameters()` 方法获取，而模型的所有参数都在 `Module.state_dict()` 中。\n",
+    "\n",
+    "下面的例子可以说明："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Net(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        # （1）常见定义模型时的操作\n",
+    "        self.param = nn.Parameter(torch.randn(2, 3))\n",
+    "        self.linear = nn.Linear(2, 3, bias=False)\n",
+    "\n",
+    "        # （2）使用register_parameter()定义一组参数\n",
+    "        self.register_parameter('param_register', nn.Parameter(torch.randn(1, 2)))\n",
+    "        \n",
+    "        # （3）使用register_buffer()定义一组参数\n",
+    "        self.register_buffer('param_buffer', torch.randn(1, 2))\n",
+    "\n",
+    "        # （4）按照实例属性形式定义一组变量\n",
+    "        self.param_attr = torch.randn(1, 2)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "net.named_parameters():\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('param',\n",
+       "  Parameter containing:\n",
+       "  tensor([[-0.0679,  1.2895, -0.8724],\n",
+       "          [-0.9042,  0.2811,  0.1051]], requires_grad=True)),\n",
+       " ('param_register',\n",
+       "  Parameter containing:\n",
+       "  tensor([[-1.9633, -0.3447]], requires_grad=True)),\n",
+       " ('linear.weight',\n",
+       "  Parameter containing:\n",
+       "  tensor([[-0.0612,  0.2192],\n",
+       "          [ 0.6092,  0.1018],\n",
+       "          [ 0.5144,  0.6962]], requires_grad=True))]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net = Net()\n",
+    "\n",
+    "# print(list(net.parameters()))\n",
+    "print(\"net.named_parameters():\")\n",
+    "list(net.named_parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "net.state_dict(): \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('param',\n",
+       "              tensor([[-0.0679,  1.2895, -0.8724],\n",
+       "                      [-0.9042,  0.2811,  0.1051]])),\n",
+       "             ('param_register', tensor([[-1.9633, -0.3447]])),\n",
+       "             ('param_buffer', tensor([[-0.1695,  1.2927]])),\n",
+       "             ('linear.weight',\n",
+       "              tensor([[-0.0612,  0.2192],\n",
+       "                      [ 0.6092,  0.1018],\n",
+       "                      [ 0.5144,  0.6962]]))])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"net.state_dict(): \")\n",
+    "net.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "可以看出：\n",
+    "1. 通过第（1）（2）两种方式定义的参数，都在`parameters`中，训练过程中是会被更新的，最终会被保存到模型的state里\n",
+    "2. 通过`register_buffer`注册的参数，不会被更新，但是会保存到模型的state里\n",
+    "3. 普通实例属性的方式定义的参数，不是`parameters`，也不会被保存到模式的state里"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "实际上，`nn.Module` 有3个保存参数的地方：modules, parameters 和 buffers，分布对应于 `self._modules`, `self._parameters` 和 `self._buffers` 三个属性。  \n",
+    "\n",
+    "但是略有不同的是，`._parameters` 只保存了`nn.Parameter`类型的参数，而 `.named_parameter()` 会返回所有的可更新参数。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "net._modules:  OrderedDict([('linear', Linear(in_features=2, out_features=3, bias=False))])\n",
+      "net.named_modules():\n",
+      " [('', Net(\n",
+      "  (linear): Linear(in_features=2, out_features=3, bias=False)\n",
+      ")), ('linear', Linear(in_features=2, out_features=3, bias=False))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"net._modules: \", net._modules)\n",
+    "print(\"net.named_modules():\\n\", list(net.named_modules()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "net._parameters:  OrderedDict([('param', Parameter containing:\n",
+      "tensor([[-0.0679,  1.2895, -0.8724],\n",
+      "        [-0.9042,  0.2811,  0.1051]], requires_grad=True)), ('param_register', Parameter containing:\n",
+      "tensor([[-1.9633, -0.3447]], requires_grad=True))])\n",
+      "net.named_parameters():\n",
+      "  [('param', Parameter containing:\n",
+      "tensor([[-0.0679,  1.2895, -0.8724],\n",
+      "        [-0.9042,  0.2811,  0.1051]], requires_grad=True)), ('param_register', Parameter containing:\n",
+      "tensor([[-1.9633, -0.3447]], requires_grad=True)), ('linear.weight', Parameter containing:\n",
+      "tensor([[-0.0612,  0.2192],\n",
+      "        [ 0.6092,  0.1018],\n",
+      "        [ 0.5144,  0.6962]], requires_grad=True))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"net._parameters: \", net._parameters)\n",
+    "print(\"net.named_parameters():\\n \", list(net.named_parameters()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "net._buffers:  OrderedDict([('param_buffer', tensor([[-0.1695,  1.2927]]))])\n",
+      "net.named_buffers():\n",
+      " [('param_buffer', tensor([[-0.1695,  1.2927]]))]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"net._buffers: \", net._buffers)\n",
+    "print(\"net.named_buffers():\\n\", list(net.named_buffers()))"
    ]
   },
   {
@@ -5373,9 +5571,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Deep-Learning",
    "language": "python",
-   "name": "python3"
+   "name": "deep-learning"
   },
   "language_info": {
    "codemirror_mode": {
