--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -2254,7 +2254,7 @@
     "\n",
     "\n",
     "注意：\n",
-    "> `transformer`包中各种模型使用的tokenizer的fast实现，就依赖于`tokenizer`包，但是slow版本的实现并不依赖。"
+    "> `transformer`包中各种模型使用的tokenizer的fast实现（使用Rust实现），就依赖于`tokenizer`包，但是slow版本的实现并不依赖。"
    ]
   },
   {
@@ -3786,62 +3786,112 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c49445f6-1524-4db2-bb2f-5333ecff5fc5",
+   "id": "b5ffa8e9-8dc6-4f92-9d8b-b6197e32eed2",
    "metadata": {},
    "source": [
     "#### 底层实现类\n",
     "\n",
     "huggingface-transformer的实现里，除了上述几个可以直接用于任务的模型类之外，还有一些底层的实现类没有对外暴露，这些实现类是上述模型的基础。\n",
     "\n",
-    "<img src=\"images/transformer-bert.png\" width=\"50%\" align=\"center\">    \n",
+    "<img src=\"images/transformer-bert.png\" width=\"50%\" align=\"center\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7c48f50-98e8-45e2-86f3-b650087838cf",
+   "metadata": {},
+   "source": [
+    "##### `BertEmbeddings`\n",
+    "+ 内部结构为 3 个 `nn.Embedding`(word_embeddings, position_embeddings, token_type_embeddings) + `nn.LayerNorm` + `nn.Dropout`\n",
+    "+ 还通过`register_buffer`注册了两个固定参数 `position_ids` 和 `token_type_ids`\n",
+    "+ 用于将输入的 `input_ids`，`token_type_ids`，`position_ids` 转成词向量，并进行相加（**原论文中是这么做的**）  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66511171-e682-49b5-8511-006682eb1455",
+   "metadata": {},
+   "source": [
+    "##### **`BertSelfAttention`-KEY**\n",
+    "实现transformer的 self-attention 操作，也就是 ${\\rm softmax}(\\frac{ {\\rm query} \\cdot {\\rm key}^T}{\\sqrt{d_k}}) \\cdot {\\rm value}$ 这一部分.  \n",
     "\n",
+    "这里的self-attention操作，既可以是 encoder 里的 self-attention，也可以是 decoder 里的 self-attention\n",
+    "+ 如果是 decoder 里的 self-attention，又分为两种情况：\n",
+    "  + decoder的 Masked-self-attention（第一层），此时 q,k,v 都来自于输出序列的同一个\n",
+    "  + decoder的 cross-self-attention（第二层），此时 q,k 来自于 encoder 的输出，v 来自于上一层的 decoder\n",
+    "+ 为了兼容上述3种情况，它的`forward`方法里，可以传入的参数很多，用于控制具体实现哪里的self-attention.\n",
     "\n",
-    "+ `BertEmbeddings`：\n",
-    "  + 用于将输入的 `input_ids`，`token_type_ids`，`position_ids` 转成词向量，并进行相加（原论文中是这么做的）  \n",
-    "  .\n",
-    "\n",
-    "\n",
-    "+ **`BertSelfAttention`-KEY**：\n",
-    "  + 实现transformer的 self-attention 操作，也就是 ${\\rm softmax}(\\frac{ {\\rm query} \\cdot {\\rm key}^T}{\\sqrt{d_k}}) \\cdot {\\rm value}$ 这一部分.  \n",
-    "  + 这里的self-attention操作，既可以是 encoder 里的 self-attention，也可以是 decoder 里的 self-attention\n",
-    "  + 如果是 decoder 里的 self-attention，又分为两种情况：\n",
-    "    + decoder的 Masked-self-attention（第一层），此时 q,k,v 都来自于输出序列的同一个\n",
-    "    + decoder的 cross-self-attention（第二层），此时 q,k 来自于 encoder 的输出，v 来自于上一层的 encoder\n",
-    "  + 为了兼容上述3种情况，它的`forward`方法里，可以传入的参数很多，用于控制具体实现哪里的self-attention.\n",
-    "  + **输出最多为 长度=3 的 tuple**：`(context_layer, attention_probs, past_key_value)`\n",
+    "+ **输出最多为 长度=3 的 tuple**：`(context_layer, attention_probs, past_key_value)`\n",
     "    + `context_layer` 是 self-attention 最后的计算结果\n",
     "    + `attention_probs` 是 ${\\rm softmax}(\\frac{ {\\rm query} \\cdot {\\rm key}^T}{\\sqrt{d_k}})$ 的结果，`output_attentions=True` 时输出\n",
-    "    + `past_key_value` 是一个 长度=2 的 tuple：`(key, value)`，存放的是 decoder 中第二层的 cross-self-attention 需要传入的 key,value. `config.is_decoder=True` 时输出.    \n",
-    "  .\n",
+    "    + `past_key_value` 是一个 长度=2 的 tuple：`(key, value)`，存放的是 decoder 中第二层的 cross-self-attention 需要传入的 key,value. `config.is_decoder=True` 时输出.    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17eeb0d9-9b27-4b14-9aae-6f16521a23ea",
+   "metadata": {},
+   "source": [
+    "##### `BertSelfOutput`\n",
+    "实现transformer里的 self-attention 之后的 **Add & Norm** 操作.    \n",
+    "实际上，在这里还增加了一个Linear + Dropout 的操作。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f55ca807-60cd-4351-809b-4d712f266037",
+   "metadata": {},
+   "source": [
+    "##### `BertAttention`\n",
+    "封装了 `BertSelfAttention` + `BertSelfOutput`，形成一个 **Attention** 层\n",
+    "+ 输出：和 `BertSelfAttention` 相同，只是将 `context_layer` 传入`BertSelfOutput`进行了 Add & Norm 处理，其他保持不变   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f66de0ec-524b-4238-b51e-a06925ea3e83",
+   "metadata": {},
+   "source": [
+    "##### `BertIntermediate`\n",
     "\n",
+    "内部是一个 Linear 层 + 激活函数，也就是 Attention 层后面的 **FeedForward** 全连接层"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67e05fa2-9b08-4f9b-978c-eef9b23298ea",
+   "metadata": {},
+   "source": [
+    "##### `BertOutput`\n",
     "\n",
-    "+ `BertSelfOutput`：实现transformer里的 self-attention 之后的 **Add & Norm** 操作.    \n",
-    "实际上，在这里还增加了一个Linear + Dropout 的操作。\n",
-    "  \n",
-    "+ `BertAttention`：封装了 `BertSelfAttention` + `BertSelfOutput`，形成一个 **Attention** 层\n",
-    "  + 输出：和 `BertSelfAttention` 相同，只是将 `context_layer` 传入`BertSelfOutput`进行了 Add & Norm 处理，其他保持不变   \n",
-    "  .\n",
+    "这个和 `BertSelfOutput` 没有区别，只是为了实现 FeedForward 层后面的 **Add & Norm** 操作"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89e2ac1c-8d2f-4798-a453-f93022639631",
+   "metadata": {},
+   "source": [
+    "##### **`BertLayer`-KEY**\n",
+    "封装了 `BertAttention` + `BertAttention`(可选) +  `BertIntermediate` + `BertOutput`，构成 encoder 或者 decoder 里的一层.    \n",
+    "它提供了如下两个参数：\n",
+    "+ `config.is_decoder`：为 True 时，作为 decoder 使用，输出 decoder 的结果，否则作为 encoder 使用，输出 encoder 的隐藏层状态\n",
+    "+ `config.add_cross_attention`：为 True 时，会再添加一个 `BertAttention` 层，也就是 decoder 内部中间的 self-attention 层，称为 **cross-attention**   \n",
     "\n",
-    "\n",
-    "+ `BertIntermediate`: 内部是一个 Linear 层 + 激活函数，也就是 Attention 层后面的 **FeedForward** 全连接层\n",
-    "\n",
-    "+ `BertOutput`：这个和 `BertSelfOutput` 没有区别，只是为了实现 FeedForward 层后面的 **Add & Norm** 操作\n",
-    "\n",
-    "\n",
-    "+ **`BertLayer`-KEY**：封装了 `BertAttention` + `BertAttention`(可选) +  `BertIntermediate` + `BertOutput`，构成 encoder 或者 decoder 里的一层.    \n",
-    "  它提供了如下两个参数：\n",
-    "  + `config.is_decoder`：为 True 时，作为 decoder 使用，输出 decoder 的结果，否则作为 encoder 使用，输出 encoder 的隐藏层状态\n",
-    "  + `config.add_cross_attention`：为 True 时，会再添加一个 `BertAttention` 层，也就是 decoder 内部中间的 self-attention 层，称为 **cross-attention**   \n",
-    "  \n",
-    "  **输出：长度=4 的tuple**: `(context_layer, attention_probs, cross_attention_probs, past_key_value)`\n",
-    "  + `context_layer` 是 输出的状态向量，它可能经过了两个 `BertAttention` 层\n",
-    "  + `attention_probs` 是第一个 `BertAttentnion` 层的输出\n",
-    "  + `cross_attention_probs` 是第二个 `BertAttentnion`(cross-attention) 层的输出\n",
-    "  + `past_key_value` 现在可能是一个 长度=4 的tuple: `(key, value, cross_attention_key, cross_attention_value)`，前两个是第一个self-attention的输出，后两个是 cross-attention的输出.    \n",
-    "  .\n",
-    "\n",
-    "\n",
-    "+ `BertEncoder`：内部是多个作为 encoder 使用的 `BertLayer` 层   \n",
+    "**输出：长度=4 的tuple**: `(context_layer, attention_probs, cross_attention_probs, past_key_value)`\n",
+    "+ `context_layer` 是 输出的状态向量，它可能经过了两个 `BertAttention` 层\n",
+    "+ `attention_probs` 是第一个 `BertAttentnion` 层的输出\n",
+    "+ `cross_attention_probs` 是第二个 `BertAttentnion`(cross-attention) 层的输出\n",
+    "+ `past_key_value` 现在可能是一个 长度=4 的tuple: `(key, value, cross_attention_key, cross_attention_value)`，前两个是第一个self-attention的输出，后两个是 cross-attention的输出.    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c95fd65-4c4f-4b84-bd78-6c636e0edbdf",
+   "metadata": {},
+   "source": [
+    "##### `BertEncoder`\n",
+    "内部是多个作为 encoder 使用的 `BertLayer` 层。    \n",
     "**输出**是一个 `BaseModelOutputWithPastAndCrossAttentions` 类，里面封装了如下结果：\n",
     "  + `last_hidden_state`：最后一个 encoder 的输出，也就是最后的 `context_layer`\n",
     "  + `hidden_states`：以 tuple 的形式记录了所有 encoder 的输出\n",
@@ -3952,6 +4002,10 @@
    "execution_count": 18,
    "id": "useful-vacuum",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -5841,7 +5895,13 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "cf5efa06-5fa6-4faa-bc59-2e45271ccc18",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
