--- a/DeepLearning-Actions/01-pytorch-tutorial.ipynb
+++ b/DeepLearning-Actions/01-pytorch-tutorial.ipynb
@@ -3594,8 +3594,8 @@
     "对数似然误差(Negative Log Likelihood Loss, 缩写为**NLLL**)对应的类是 `nn.NLLLoss()`，通常用于多分类问题 .    \n",
     "\n",
     "它实例化的对象接受的参数为`(Input, Target)`：\n",
-    "+ `Input`的 `shape=(batch_size, C)`，$C$ 是类别的个数。其中每一行的值应当是 $log(softmax(x))$ 的结果——也就是所谓的 Log Likelihood.\n",
-    "+ `Target`的 `shape=(batch_size)`\n",
+    "+ `Input`的 `shape=(batch_size, C)`，$C$ 是类别的个数。其中每一行的值应当是 $log(softmax(x))$ 的结果——也就是所谓的 Log Likelihood，这个可以由 `nn.LogSoftmax` 层计算得到.\n",
+    "+ `Target`的 `shape=(batch_size)`，其中**值必须是范围 $[0, C-1]$ 中的整数（类型也必须为整数，不能是浮点数），表示对应类别的索引**。\n",
     "\n",
     "这个类的构造函数里有一个 `reduction='mean'` 的参数，表示会将得到的结果进行reduce，方式是取均值。"
    ]
@@ -3610,33 +3610,30 @@
      "output_type": "stream",
      "text": [
       "y_true.shape:  torch.Size([3])\n",
-      "y_true:\n",
-      "tensor([1, 0, 0])\n",
+      "y_true:  tensor([1, 0, 0])\n",
       "\n",
       "y_pred.shape:  torch.Size([3, 2])\n",
       "y_pred:\n",
-      "tensor([[1., 0.],\n",
-      "        [1., 0.],\n",
-      "        [0., 1.]], requires_grad=True)\n",
+      " tensor([[0.3000, 0.7000],\n",
+      "        [0.4000, 0.6000],\n",
+      "        [0.8000, 0.2000]], requires_grad=True)\n",
       "\n",
       "Negative-Likehood-Log-Loss (关闭 reduce):\n",
-      "tensor([-0., -1., -0.], grad_fn=<NllLossBackward>)\n",
+      "tensor([-0.7000, -0.4000, -0.8000], grad_fn=<NllLossBackward0>)\n",
       "\n",
       "Negative-Likehood-Log-Loss (reduce='mean'):\n",
-      "tensor(-0.3333, grad_fn=<NllLossBackward>)\n"
+      "tensor(-0.6333, grad_fn=<NllLossBackward0>)\n"
      ]
     }
    ],
    "source": [
     "y_true = torch.tensor([1, 0, 0], dtype=torch.long)\n",
-    "y_pred = torch.tensor([[1,0], [1,0], [0,1]], dtype=torch.float, requires_grad=True)\n",
+    "y_pred = torch.tensor([[0.3, 0.7], [0.4, 0.6], [0.8, 0.2]], dtype=torch.float, requires_grad=True)\n",
     "\n",
     "print(\"y_true.shape: \", y_true.shape)\n",
-    "print(\"y_true:\")\n",
-    "print(y_true)\n",
+    "print(\"y_true: \", y_true)\n",
     "print(\"\\ny_pred.shape: \", y_pred.shape)\n",
-    "print(\"y_pred:\")\n",
-    "print(y_pred)\n",
+    "print(\"y_pred:\\n\", y_pred)\n",
     "\n",
     "nll = nn.NLLLoss(reduction='none') # 关闭 reduce\n",
     "loss = nll(y_pred, y_true)\n",
@@ -3659,7 +3656,7 @@
     "+ 对于一个二分类的问题，有 3 个样本，\n",
     "+ 输入的 `y_true.shape=[3]`，每个元素是实际的类别 0 或 1。如果是多分类，有 $C$ 个类别，那么取值就是 $[0, C-1]$.\n",
     "+ 输入的 `y_pred.shape=[3, 2]`, 每一行是长度=2的向量，向量的每个值对应于取该类别的概率——**实际输入时这个应该是经过 softmax + log 之后的 log likelyhood**。\n",
-    "+ 在 `reduce='none'`时，NLLLoss 会将 `y_true` 看做 `y_pred` 中每一行的索引，取出其中的值，并加上 负号。  \n",
+    "+ 在 `reduce='none'`时，NLLLoss 会**将 `y_true` 看做 `y_pred` 中每一行的索引，取出其中的值，并加上 负号**。  \n",
     "这是因为 `y_true`中的元素取值为 $[0, C-1]$，就是 `y_pred` 每一行的长度，用于从中获得该样本取每一类的对数概率。\n",
     "+ `reduce='mean'`时，就是将上述结果进行聚合。\n",
     "\n",
@@ -3668,7 +3665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -3676,18 +3673,15 @@
      "output_type": "stream",
      "text": [
       "input_tensor:\n",
-      " tensor([[-0.7142, -1.4875, -0.9207, -0.1043, -0.0645],\n",
-      "        [ 0.5339,  0.2950,  0.4972, -0.7490,  1.0334],\n",
-      "        [-0.2580, -1.1683, -0.9682, -0.8448, -0.2316]], requires_grad=True)\n",
+      " tensor([[ 0.3081, -0.5372,  0.0873,  1.1089, -0.7846],\n",
+      "        [-0.4824, -1.4766, -0.8438, -0.4354, -0.8024],\n",
+      "        [-0.6489,  0.7433, -0.6201,  2.1465, -0.8499]], requires_grad=True)\n",
       "\n",
-      " LogSoftmax out:\n",
-      " tensor([[-1.7968, -2.5701, -2.0033, -1.1869, -1.1470],\n",
-      "        [-1.5426, -1.7815, -1.5793, -2.8255, -1.0430],\n",
-      "        [-1.2461, -2.1564, -1.9563, -1.8329, -1.2197]],\n",
-      "       grad_fn=<LogSoftmaxBackward>)\n",
-      "\n",
-      " NLLoss out:\n",
-      " tensor(1.7775, grad_fn=<NllLossBackward>)\n"
+      "LogSoftmax out:\n",
+      " tensor([[-1.5673, -2.4127, -1.7882, -0.7666, -2.6600],\n",
+      "        [-1.3457, -2.3399, -1.7072, -1.2987, -1.6657],\n",
+      "        [-3.1459, -1.7536, -3.1171, -0.3505, -3.3468]],\n",
+      "       grad_fn=<LogSoftmaxBackward0>)\n"
      ]
     }
    ],
@@ -3700,16 +3694,37 @@
     "input = torch.randn(3, 5, requires_grad=True)\n",
     "print(\"input_tensor:\\n\", input)\n",
     "\n",
-    "# each element in target has to have 0 <= value < C\n",
-    "target = torch.tensor([1, 0, 4])\n",
-    "\n",
     "# 先对 input 做 softmax + log 变换，每一行表示取各个类别的对数概率\n",
     "logsoftmax_out = logsoftmax(input)\n",
-    "print(\"\\n LogSoftmax out:\\n\", logsoftmax_out)\n",
+    "print(\"\\nLogSoftmax out:\\n\", logsoftmax_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "NLLoss out:\n",
+      " tensor(2.3684, grad_fn=<NllLossBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 实际的输出，each element in target has to have 0 <= value <= C-1\n",
+    "target = torch.tensor([1, 0, 4])\n",
+    "# 必须是整数，不能是下面的浮点数\n",
+    "# target = torch.tensor([1.0, 0, 4.0])\n",
+    "# 因此也更不可能是下面的这种小数了\n",
+    "# target = torch.tensor([1.5, 0, 3.5])\n",
     "\n",
     "# 将 LogSoftmax 的结果作为 输入\n",
     "output = loss(logsoftmax_out, target)\n",
-    "print(\"\\n NLLoss out:\\n\", output)"
+    "print(\"\\nNLLoss out:\\n\", output)"
    ]
   },
   {
@@ -3719,23 +3734,17 @@
     "### 交叉熵误差\n",
     "\n",
     "`nn.CrossEntropyLoss()`可以用于多分类问题，它就是对 `nn.LogSoftmax` + `nn.NLLLoss` 的封装 .    \n",
+    "\n",
+    "多分类的交叉熵计算公式为：$H(p, q) = - \\sum_{x}[p(x)logq(x)]$，其中 $q(x)$ 通常是模型得到的类别取值的概率分布，$p(x)$ 是样本实际的概率分布（这个分布通常是多项分布）.  \n",
+    "\n",
     "它实例化的对象接受的参数为`(Input, Target)`：\n",
-    "+ `Input`的 `shape=(batch_size, C)`，$C$ 是类别的个数\n",
+    "+ `Input`的 `shape=(batch_size, C)`，$C$ 是类别的个数，其中每一行的取值是每个类别的 unnormalized logits（不必全为正，或者sum=1）.\n",
     "+ `Target`的 `shape=(batch_size)`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "crossEnt = nn.CrossEntropyLoss()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3743,34 +3752,89 @@
      "output_type": "stream",
      "text": [
       "y_true.shape:  torch.Size([3])\n",
-      "y_true:\n",
-      "tensor([1, 0, 0])\n",
+      "y_true:  tensor([1, 0, 2])\n",
       "\n",
-      "y_pred.shape:  torch.Size([3, 2])\n",
+      "y_pred.shape:  torch.Size([3, 3])\n",
       "y_pred:\n",
-      "tensor([[1., 0.],\n",
-      "        [1., 0.],\n",
-      "        [0., 1.]], requires_grad=True)\n",
-      "\n",
-      "Negative-Likehood-Log-Loss:\n",
-      "tensor(0.9799, grad_fn=<NllLossBackward>)\n"
+      " tensor([[0.1000, 0.5000, 0.4000],\n",
+      "        [0.2500, 0.2500, 0.5000],\n",
+      "        [0.6000, 0.3000, 0.1000]], requires_grad=True)\n"
      ]
     }
    ],
    "source": [
-    "y_true = torch.tensor([1, 0, 0], dtype=torch.long)\n",
-    "y_pred = torch.tensor([[1,0], [1,0], [0,1]], dtype=torch.float, requires_grad=True)\n",
+    "# 3个样本，类别为 C=3\n",
+    "y_true = torch.tensor([1, 0, 2], dtype=torch.long)\n",
+    "data = [[0.1, 0.5, 0.4], [0.25, 0.25, 0.5], [0.6, 0.3, 0.1]]\n",
+    "y_pred = torch.tensor(data, dtype=torch.float, requires_grad=True)\n",
     "\n",
     "print(\"y_true.shape: \", y_true.shape)\n",
-    "print(\"y_true:\")\n",
-    "print(y_true)\n",
+    "print(\"y_true: \", y_true)\n",
+    "\n",
     "print(\"\\ny_pred.shape: \", y_pred.shape)\n",
-    "print(\"y_pred:\")\n",
-    "print(y_pred)\n",
-    "\n",
+    "print(\"y_pred:\\n\", y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CrossEntropyLoss(reduction='none'):\n",
+      "tensor([0.9459, 1.1891, 1.3533], grad_fn=<NllLossBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "crossEnt = nn.CrossEntropyLoss(reduction='none')\n",
     "loss = crossEnt(y_pred, y_true)\n",
-    "\n",
-    "print(\"\\nNegative-Likehood-Log-Loss:\")\n",
+    "print(\"CrossEntropyLoss(reduction='none'):\")\n",
+    "print(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CrossEntropyLoss(reduction='mean'):\n",
+      "tensor(1.1628, grad_fn=<NllLossBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "crossEnt = nn.CrossEntropyLoss(reduction='mean')\n",
+    "loss = crossEnt(y_pred, y_true)\n",
+    "print(\"CrossEntropyLoss(reduction='mean'):\")\n",
+    "print(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CrossEntropyLoss(reduction='sum'):\n",
+      "tensor(3.4883, grad_fn=<NllLossBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "crossEnt = nn.CrossEntropyLoss(reduction='sum')\n",
+    "loss = crossEnt(y_pred, y_true)\n",
+    "print(\"CrossEntropyLoss(reduction='sum'):\")\n",
     "print(loss)"
    ]
   },
