--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -540,19 +540,21 @@
     "\n",
     "一般datasets-hub上提供的数据集，基本都有脚本，**脚本中会从URL下载原始数据集，进行一些数据处理，然后生成便于使用的数据集格式（Arrow格式）**，并且此脚本会返回一个`DatasetBuilder`对象，记录数据集的元数据信息。\n",
     "\n",
+    "如果一个dataset只有数据文件，没有脚本文件，那么`load_dataset()`方法会根据数据文件的后缀来自动推断使用哪种加载方式。\n",
+    "\n",
     "datasets中提供的数据一般会以Apache-Arrow的格式存储，这是一种常用于存储大数据的列存储格式。"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b0db8857-86f2-41f3-80b3-83ae968c1fbf",
+   "id": "93982b52-6ad8-44a6-9569-7e30a1bebad4",
    "metadata": {},
    "source": [
     "### 数据集加载\n",
     "\n",
     "参考文档 [datasets: Tutorials --> Load a dataset from the Hub](https://huggingface.co/docs/datasets/load_hub#load-a-dataset-from-the-hub).\n",
     "\n",
-    "`datasets` 模块提供了如下的函数用于加载数据：\n",
+    "`datasets` 模块提供了如下用于加载数据的辅助函数：\n",
     "\n",
     "+ `list_datasets()`，以list的形式列出可用的数据集（实际上是处理数据集的脚本），不过**推荐直接去 dataset-hub 里查找**，因为数据集实在是太多了，这个返回结果会很大，很卡。\n",
     "\n",
@@ -578,20 +580,26 @@
     "\n",
     "\n",
     "+ `get_dataset_split_names()`，获取数据集中split信息，**一个split就是数据集的子集，比如训练集，测试集等**\n",
-    "  + 内部调用`get_dataset_config_info()`         \n",
+    "  + 内部调用`get_dataset_config_info()`         "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e40a5f92-2d84-49cd-b1a1-852403482383",
+   "metadata": {},
+   "source": [
+    "**`load_dataset()`——KEY**\n",
     "\n",
-    "\n",
-    "+ **`load_dataset()`——KEY**，最重要的函数，内部会执行如下几件事（参见[接口文档](https://huggingface.co/docs/datasets/package_reference/loading_methods#datasets.load_dataset)）：\n",
-    "  1. 调用`load_dataset_builder()`获取数据集的元数据和Python脚本\n",
-    "  2. 从Python脚本中的URL下载原始数据集，并进行处理             \n",
-    "\n",
+    "dataset提供的最重要的函数，内部会执行如下几件事（参见[接口文档](https://huggingface.co/docs/datasets/package_reference/loading_methods#datasets.load_dataset)）：\n",
+    "1. 调用`load_dataset_builder()`获取数据集的元数据和Python脚本\n",
+    "2. 从Python脚本中的URL下载原始数据集，并进行处理             \n",
     "\n",
     "\n",
     "`load_dataset()`接受的参数如下（大部分参数也可用于`load_dataset_builder()`）\n",
     "+ `path`：数据集的path或者name，有如下几种情况：\n",
     "  + 本地路径：\n",
     "    + 文件夹中只有数据文件，则基于文件类型(csv,txt,json等)使用通用的builder，包含文件夹下的所有的数据\n",
-    "    + 指向从huggingface-hub中已经下载好的对应数据集的处理脚本，则会运行该脚本，创建对应的builder对象\n",
+    "    + 指向一个本地的**数据处理脚本**或者一个包含数据处理脚本的文件夹（此时要求脚本名称和文件夹名称相同，比如 `./dataset/squad/squad.py`），则会运行该脚本，创建对应的builder对象\n",
     "  + 数据集名称：\n",
     "    + 指向huggingface-hub中的数据名称，然后按照上面的方式处理，如果hub上的该数据只有数据，就使用通用的builder，如果含有处理脚本，就使用对应的处理脚本\n",
     "    \n",
@@ -604,7 +612,7 @@
     "\n",
     "+ `split`：获取数据集的哪个子集\n",
     "  + 不指定时，返回该数据集的所有split，封装成一个`DatasetDict`\n",
-    "  + 指定时，返回的是`Dataset`\n"
+    "  + 指定时，返回的是`Dataset`"
    ]
   },
   {
@@ -1528,6 +1536,9 @@
     "  + `version`：版本\n",
     "  + `data_dir`\n",
     "  + `data_files`:\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "+ `DatasetBuilder`：这个类记录了数据集的生成方式，它内部持有 `BuilderConfig` 的对象，从而访问数据集的信息.    \n",
     "自定义加载脚本时，有如下3个方法需要重写：\n",
