--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -570,7 +570,7 @@
     "\n",
     "\n",
     "+ `get_dataset_config_names()`，返回数据集的配置信息\n",
-    "  + 有些数据集会有**多个类型的子数据集(sub-datasets)，**这些子数据集被称为 *configurations*，可以用这个函数查看指定数据集含有哪些子数据集\n",
+    "  + 有些数据集会有**多个子数据集(sub-datasets)，**这些子数据集被称为 *configurations*，可以用这个函数查看指定数据集含有哪些子数据集\n",
     "  + 内部也会实例化一个`dataset_module_factory`对象    \n",
     "\n",
     "\n",
@@ -1529,22 +1529,34 @@
     "\n",
     "官方提供了一个自定义加载脚本的模板 [new_dataset_script.py](https://github.com/huggingface/datasets/blob/main/templates/new_dataset_script.py)，可以在这个模板上进行修改。\n",
     "\n",
+    "\n",
     "自定义数据加载脚本的关键是如下两个类：\n",
-    "+ `BuilderConfig`：这个类记录了数据集的一些配置信息，常用的配置信息有：\n",
+    "+ `BuilderConfig`：这个类是一个 `dataclass` 类，记录了数据集的一些配置信息.   \n",
+    "常用的配置信息有：\n",
     "  + `name`：数据集名称\n",
     "  + `description`：数据集描述\n",
     "  + `version`：版本\n",
     "  + `data_dir`\n",
     "  + `data_files`:\n",
     "\n",
-    "\n",
-    "\n",
+    "  这个 `BuilderConfig` 对应的就是各个子数据集，多个`BuilderConfig`对象会放入`DatasetBuilder`对象的`BUILDER_CONFIGS`属性里。\n",
     "\n",
     "+ `DatasetBuilder`：这个类记录了数据集的生成方式，它内部持有 `BuilderConfig` 的对象，从而访问数据集的信息.    \n",
-    "自定义加载脚本时，有如下3个方法需要重写：\n",
-    "  + `_info()`：这个方法返回一个`DatasetInfo`对象，记录了数据集的信息\n",
+    "这个类是一个抽象类，它的常用子类为 `GeneratorBasedBuilder`，自定义加载脚本时，通常会继承 `GeneratorBasedBuilder` 类，然后实现如下3个方法：\n",
+    "  + `_info()`：这个方法需要返回一个`DatasetInfo`对象，其中记录了数据集的信息.   \n",
+    "  此方法返回的`DatasetInfo`对象也是一个`dataclass`，它里面记录的信息会被合并到 `DatasetBuilder.info` 属性里（该属性也是`DatasetInfo`对象）.\n",
     "  + `_split_generators()`：进行下载数据、处理成各个split的操作\n",
-    "  + `_generate_examples()`：负责生成每个split里的数据的实际逻辑"
+    "  + `_generate_examples()`：负责生成每个split里的数据的实际逻辑 —— 这个方法实际上是 `GeneratorBasedBuilder` 类的抽象方法.    \n",
+    "\n",
+    "  此外，这个类还有如下几个类属性用于进行配置：\n",
+    "  + `VERSION`，用于设置`BuilderConfig` 中的version属性\n",
+    "  + `BUILDER_CONFIGS`，这是一个列表，里面存放的是各个 `BuilderConfig` 类\n",
+    "  + `DEFAULT_CONFIG_NAME`，指定默认的 `BuilderConfig`\n",
+    "  \n",
+    "\n",
+    "下面的图片做了一个简单总结：\n",
+    "\n",
+    "<img src=\"images/hf-dataset-builder.jpg\" width=\"70%\" align=\"center\">"
    ]
   },
   {
@@ -1563,8 +1575,11 @@
     "    VERSION = Version(\"1.0.0\")\n",
     "    # BuilderConfig 必须要放在这个类属性里\n",
     "    BUILDER_CONFIGS = [\n",
-    "        BuilderConfig(name='Plain_text')\n",
+    "        BuilderConfig(name='MyDataset')\n",
     "    ]\n",
+    "    DEFAULT_CONFIG_NAME = 'MyDataset'\n",
+    "    \n",
+    "    # 下面是自定义的属性，通常是存放在 `DatasetInfo` 中的属性\n",
     "    _CITATION = \"\"\n",
     "    _DESCRIPTION = \"\"\n",
     "    _HOMEPAGE = \"\"\n",
@@ -1582,7 +1597,6 @@
     "            \"text\": Value(dtype='string'),\n",
     "            'ids': Value(dtype='string', id=None)\n",
     "        }\n",
-    "        \n",
     "        # 返回封装的 DatasetInfo 对象\n",
     "        return DatasetInfo(\n",
     "            description=self._DESCRIPTION,\n",
