--- a/DeepLearning-Actions/01-pytorch-tutorial.ipynb
+++ b/DeepLearning-Actions/01-pytorch-tutorial.ipynb
@@ -4114,19 +4114,113 @@
     "\n",
     "# 数据加载和变换\n",
     "\n",
-    "详细说明可以参考官方文档 [WRITING CUSTOM DATASETS, DATALOADERS AND TRANSFORMS](https://pytorch.org/tutorials/beginner/data_loading_tutorial.html).\n",
+    "详细说明可以参考如下官方文档：\n",
+    "+ [Tutorials -> Introduction to PyTorch --> DATASETS & DATALOADERS](https://pytorch.org/tutorials/beginner/basics/data_tutorial.html)，这个比较简略.\n",
+    "+ [Tutorials -> PyTorch Recipes --> LOADING DATA IN PYTORCH](https://pytorch.org/tutorials/recipes/recipes/loading_data_recipe.html)，这个也比较简略.\n",
+    "+ [Tutorials -> WRITING CUSTOM DATASETS, DATALOADERS AND TRANSFORMS](https://pytorch.org/tutorials/beginner/data_loading_tutorial.html).\n",
+    "+ [Docs -> TORCH.UTILS.DATA](https://pytorch.org/docs/stable/data.html)\n",
     "\n",
     "一般训练的时候，需要对数据进行分batch进行，为了更方便的提供数据，Pytorch提供了 `torch.utils.data` 包用于辅助处理数据。  \n",
     "这里面主要有两个类：\n",
-    "1. `data.DataSet()`，一个抽象类，提供对数据的封装。\n",
-    "2. `data.DataLoader()`，在 `DataSet`上进行迭代，每次返回一个 batch 的数据，并且可以实现 shuffle 和 多进程读取。\n",
+    "1. `data.Dataset()`，一个抽象类，提供对数据的封装。\n",
+    "2. `data.DataLoader()`，在 `Dataset`上进行迭代，每次返回一个 batch 的数据，并且可以实现 shuffle 和 多进程读取。\n",
     "\n",
-    "+ 自定义数据集需要做如下步骤：\n",
-    "  1. 编写一个类，继承`data.DataSet`类\n",
-    "  2. 实现`__len__()`方法和 `__getitem__()` 方法\n",
+    "除了基本的数据处理工具，PyTorch还提供了一些常见领域的pre-loaded datasets，这些数据集都是继承于 `Dataset` 类，有 如下数据集可供使用：\n",
+    "+ Image Datasets，位于 `torchvision.datasets` 包中\n",
+    "+ Text Datasets，位于 `torchtext.datasets` 包中\n",
+    "+ Audio Datasets，位于 `torchaudio.datasets` 包中\n",
+    "\n",
+    "\n",
+    "自定义数据集需要做如下步骤：\n",
+    "1. 编写一个类，继承`data.DataSet`类\n",
+    "2. 实现`__len__()`方法和 `__getitem__()` 方法\n",
     "  \n",
-    "  \n",
-    "+ 自定义数据集类之后，只需要将它传递给`data.DataLoader()`类作为初始化参数即可返回一个可迭代的对象，在此对象上执行分批操作即可."
+    "自定义数据集类之后，只需要将它传递给`data.DataLoader()`类作为初始化参数即可返回一个可迭代的对象，在此对象上执行分批操作即可."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import Dataset, DataLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyDataset(Dataset):\n",
+    "    def __init__(self, num):\n",
+    "        self.data = list(range(num))\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.data)\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        return self.data[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mydata = MyDataset(num=10)\n",
+    "dataloader = DataLoader(dataset=mydata, batch_size=2, shuffle=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data in mydata:\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0, 1])\n",
+      "tensor([2, 3])\n",
+      "tensor([4, 5])\n",
+      "tensor([6, 7])\n",
+      "tensor([8, 9])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data in dataloader:\n",
+    "    print(data)"
    ]
   },
   {
