--- a/DataVisualization/Python-Seaborn.ipynb
+++ b/DataVisualization/Python-Seaborn.ipynb
@@ -2968,9 +2968,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Data-Analysis-Env",
    "language": "python",
-   "name": "python3"
+   "name": "data-analysis"
   },
   "language_info": {
    "codemirror_mode": {
