电信用户流失练习

--- a/Projects-in-Action/Telco-Customer-Churn/Telco-Customer-Churn.ipynb
+++ b/Projects-in-Action/Telco-Customer-Churn/Telco-Customer-Churn.ipynb
@@ -4,12 +4,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Kaggle地址:https://www.kaggle.com/blastchar/telco-customer-churn"
+    "# 项目简介\n",
+    "\n",
+    "Kaggle地址:https://www.kaggle.com/blastchar/telco-customer-churn\n",
+    "\n",
+    "\n",
+    "> **About Dataset**  \n",
+    "> *Context*\n",
+    "> \"Predict behavior to retain customers. You can analyze all relevant customer data and develop focused customer retention programs.\" [IBM Sample Data Sets]\n",
+    "> \n",
+    "> *Content*\n",
+    "> Each row represents a customer, each column contains customer’s attributes described on the column Metadata.\n",
+    "> \n",
+    "> **The data set includes information about**:\n",
+    "> \n",
+    "> + Customers who left within the last month – the column is called Churn\n",
+    "> + Services that each customer has signed up for – phone, multiple lines, internet, online security, online backup, device protection, tech support, and streaming TV and movies\n",
+    "> + Customer account information – how long they’ve been a customer, contract, payment method, paperless billing, monthly charges, and total charges\n",
+    "> + Demographic info about customers – gender, age range, and if they have partners and dependents\n",
+    "> \n",
+    "> *Inspiration*\n",
+    "> To explore this type of models and learn more about the subject.   \n",
+    "> \n",
+    "> New version from IBM:\n",
+    "> https://community.ibm.com/community/user/businessanalytics/blogs/steven-macko/2019/07/11/telco-customer-churn-1113"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EDA"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,21 +63,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 读取数据"
+    "## 数据加载"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'D:\\\\Documents\\\\MyProjects\\\\DataAnalysis\\\\Kaggle\\\\Telco-Customer-Churn'"
+       "'C:\\\\Users\\\\Drivi\\\\Python-Projects\\\\DataAnalysis\\\\Projects-in-Action\\\\Telco-Customer-Churn'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +99,7 @@
        "(7043, 21)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,8 +111,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -290,13 +322,75 @@
        "4   Yes  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| 字段 | 解释 |\n",
+    "| ------ | ------ |\n",
+    "| customerID | 用户ID |\n",
+    "| gender | 性别 |\n",
+    "| SeniorCitizen | 是否是老年人（1代表是） |\n",
+    "| Partner | 是否有配偶（Yes or No） |\n",
+    "| Dependents | 是否经济独立（Yes or No） |\n",
+    "| tenure | 用户入网时间 |\n",
+    "| PhoneService | 是否开通电话业务（Yes or No） |\n",
+    "| MultipleLines | 是否开通多条电话业务（Yes 、 No or No phoneservice） |\n",
+    "| InternetService | 是否开通互联网服务（No、DSL数字网络或filber potic光线网络） |\n",
+    "| OnlineSecurity | 是否开通网络安全服务（Yes、No or No internetservice） |\n",
+    "| OnlineBackup | 是否开通在线备份服务（Yes、No or No internetservice） |\n",
+    "| DeviceProtection | 是否开通设备保护服务（Yes、No or No internetservice） |\n",
+    "| TechSupport | 是否开通技术支持业务（Yes、No or No internetservice）  |\n",
+    "| StreamingTV  | 是否开通网络电视（Yes、No or No internetservice） |\n",
+    "| StreamingMovies | 是否开通网络电影（Yes、No or No internetservice）  |\n",
+    "| Contract | 合同签订方式（按月、按年或者两年）  |\n",
+    "| PaperlessBilling | 是否开通电子账单（Yes or No）  |\n",
+    "| PaymentMethod | 付款方式（bank transfer、credit card、electronic check、mailed check） |\n",
+    "| MonthlyCharges | 月度费用 |\n",
+    "| TotalCharges | 总费用  |\n",
+    "| Churn | 是否流失（Yes or No） |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "特征分为如下几类:\n",
+    "\n",
+    "用户人口统计信息（4个）\n",
+    "+ gender，性别：Male/Female\n",
+    "+ SeniorCitizen，是否为老年人：0/1\n",
+    "+ Partner，是否有配偶：Yes/No\n",
+    "+ Dependents，是否有需要养育的人：Yes/No\n",
+    "  \n",
+    "用户注册的服务信息（9个）\n",
+    "+ PhoneService，是否注册了电话服务：Yes/No\n",
+    "+ MultipleLines，是否有多条线路服务：Yes/No/No phone service\n",
+    "+ InternetService，互联网服务提供商：DSL/Fiber optic/No\n",
+    "+ OnlineSecurity，是否登记了在线安全服务：Yes/No/No inernet service\n",
+    "+ OnlineBackup，是否有备份线路：Yes/No/No inernet service\n",
+    "+ DeviceProtection，是否登记了设备保护服务：Yes/No/No inernet service\n",
+    "+ TechSupport，是否登记了技术支持服务：Yes/No/No inernet service\n",
+    "+ StreamingTV，是否登记了流媒体电视服务：Yes/No/No inernet service\n",
+    "+ StreamingMovies，是否登记了流媒体电影服务：Yes/No/No inernet service\n",
+    "\n",
+    "\n",
+    "用户账户信息（6个）  \n",
+    "+ tenure，任职时长，单位为月\n",
+    "+ Contract，合同类型：Month-to-month/One year/Two year\n",
+    "+ PaperlessBilling，是否开通电子账单：Yes/No\n",
+    "+ PaymentMethod，支付方式：Electronic check/Mailed check/Bank transfer (automatic)/Credit card (automatic)\n",
+    "+ MonthlyCharges，每月账单\n",
+    "+ TotalCharges，总账单\n"
    ]
   },
   {
@@ -3919,9 +4013,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Data-Analysis",
    "language": "python",
-   "name": "python3"
+   "name": "data-analysis"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3933,7 +4027,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.13"
   },
   "toc-autonumbering": false,
   "toc-showcode": false,
