--- a/DeepLearning-Actions/05-transformer.ipynb
+++ b/DeepLearning-Actions/05-transformer.ipynb
@@ -506,7 +506,8 @@
    "cell_type": "markdown",
    "id": "65566a18-b616-474b-b6da-e3596dcc94fb",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "toc-hr-collapsed": true
    },
    "source": [
     "----\n",
@@ -2256,7 +2257,9 @@
   {
    "cell_type": "markdown",
    "id": "c1cbc6e3-0f3e-4c2b-aed6-b1308c226b62",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "-----\n",
     "\n",
@@ -2382,7 +2385,10 @@
   {
    "cell_type": "markdown",
    "id": "5bdd11ca-637b-4942-8fd0-20205104a34a",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "#### Unigram\n",
     "参考文档：[Course --> 6. The tokenizers library -> Unigram tokenization](https://huggingface.co/course/chapter6/7?fw=pt#unigram-tokenization)\n",
@@ -2400,6 +2406,8 @@
    "metadata": {},
    "source": [
     "### tokenizer使用\n",
+    "\n",
+    "API文档 [Tokenizer](https://huggingface.co/docs/tokenizers/api/tokenizer). 不过官方API的文档浏览起来不那么方便，不如直接看源码的pyi或者stubs文件方便。\n",
     "\n",
     "`Tokenizer`类的属性如下：\n",
     "+ `normalizer`属性，pipeline中使用的`Normalizer`类\n",
@@ -2936,7 +2944,50 @@
    "source": [
     "----\n",
     "\n",
-    "### Configuration"
+    "### Configuration\n",
+    "\n",
+    "API文档 [Configuration](https://huggingface.co/docs/transformers/main_classes/configuration).\n",
+    "\n",
+    "只有一个`PretrainedConfig`类，提供了如下功能：\n",
+    "+ 封装了一些对于大部分transformer架构模型所涉及的参数作为属性\n",
+    "+ 封装了loading/downloading/saving操作相关的方法"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb1bab9c-86ae-43ac-9154-5f12da64b483",
+   "metadata": {},
+   "source": [
+    "#### 常用属性\n",
+    "\n",
+    "**公共属性**\n",
+    "+ vocab_size\n",
+    "+ hidden_size\n",
+    "+ num_attention_heads\n",
+    "+ num_hidden_layers\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a45dfde-fcc6-494f-92c6-f682d4cea4c2",
+   "metadata": {},
+   "source": [
+    "#### 常用方法\n",
+    "\n",
+    "加载模型：   \n",
+    "（1）`from_pretrained(cls, pretrained_model_name_or_path: Union[str, os.PathLike], **kwargs) -> \"PretrainedConfig\"`：最常用的方法（注意，这是一个类方法）\n",
+    "\n",
+    "（2）`from_dict(cls, config_dict: Dict[str, Any], **kwargs) -> \"PretrainedConfig\":`，也是一个类方法\n",
+    "\n",
+    "（3）`from_json_file(cls, json_file: Union[str, os.PathLike]) -> \"PretrainedConfig\":`，同样，也是类方法\n",
+    "\n",
+    "\n",
+    "保存模型：   \n",
+    "（1）`save_pretrained(self, save_directory: Union[str, os.PathLike], push_to_hub: bool = False, **kwargs)`\n",
+    "\n",
+    "（2）`to_dict(self) -> Dict[str, Any]`\n",
+    "\n",
+    "（3）`to_json_file(self, json_file_path: Union[str, os.PathLike], use_diff: bool = True)`"
    ]
   },
   {
@@ -2953,7 +3004,7 @@
     "有关 tokenizer 的使用，可以参考如下官方教程\n",
     "+ [Tutorials --> Preprocess -> NLP](https://huggingface.co/docs/transformers/preprocessing#nlp)\n",
     "+ [Conceptual Guide --> Glossary -> Model inputs](https://huggingface.co/docs/transformers/glossary#model-inputs)\n",
-    "+ 接口文档[Transformer-Tokenizer](https://huggingface.co/docs/transformers/v4.17.0/en/main_classes/tokenizer)\n",
+    "+ 接口文档 [Transformer-Tokenizer](https://huggingface.co/docs/transformers/v4.17.0/en/main_classes/tokenizer)\n",
     "\n",
     "`Tokenizer`类是处理transformer结构输入的主要类，它用于将文本类的数据转换成transformer结构能够接受的序列数据.  \n",
     "\n",
@@ -6179,9 +6230,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Deep-Learning-Env",
    "language": "python",
-   "name": "python3"
+   "name": "deep-learning"
   },
   "language_info": {
    "codemirror_mode": {
@@ -6193,7 +6244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.18"
   },
   "toc-autonumbering": true,
   "toc-showcode": false,
